--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-intl": "^4.6.1",
     "next-themes": "^0.4.6",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
